@@ -239,4 +239,10 @@ describe Repository, models: true do
       it { is_expected.to eq(true) }
     end
   end
+
+  describe :skip_merged_commit do
+    subject { repository.commits(Gitlab::Git::BRANCH_REF_PREFIX + "'test'", nil, 100, 0, true).map{ |k| k.id } }
+
+    it { is_expected.not_to include('e56497bb5f03a90a51293fc6d516788730953899') }
+  end
 end
